Add Next.js frontend to create full-stack municipal services platform
Frontend Features:
- Modern React/Next.js 14 interface with TypeScript
- Issue reporting form with file upload
- Event management and viewing
- Responsive design with shadcn/ui components
- Integration with backend API on localhost:5268
- No authentication required - direct access to all features

Updated Documentation:
- Full-stack setup instructions for both backend and frontend
- Clear project structure showing both API and frontend
- Step-by-step guide for running complete application

--- a/.gitignore
+++ b/.gitignore
@@ -78,11 +78,13 @@ artifacts/
 *.tmp
 *.temp
 
-# Frontend/Node.js files (since we only want C# backend)
-municipal-nextjs/
-node_modules/
-package.json
-package-lock.json
+# Frontend/Node.js files
+municipal-nextjs/node_modules/
+municipal-nextjs/.next/
+municipal-nextjs/.env.local
+municipal-nextjs/dist/
+municipal-nextjs/build/
+**/node_modules/
 
 # Test files
 test-upload.*
